--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -338,6 +338,7 @@
                 if (id) {
                     if (checkItemExists('focus', id)) {
                         $(self).addClass('is-active');
+                        self.setAttribute('data-tooltip', '取消關注');
                         self.setAttribute('eh-focus-add', true);
                     };
                 } else {
