--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SearchBar/SearchBar.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SearchBar/SearchBar.cshtml
@@ -340,17 +340,18 @@
                 }
             }
 
-            function getType() {
-                return SC_DATA.S_Option.val() == '全部' ? null : SC_DATA.S_Option.val();
+            function getName(type) {
+                return SC_DATA.S_Option.val() == '全部' ? $('#SearchCategory option[data-producttype="' + type + '"]').val() : SC_DATA.S_Option.val();
             }
 
             function getFundResult(list) {
                 $.each(SC_DATA.S_Result.FundProducts, function (i, item) {
+                    let type = 'ETF';
                     let obj = {
                         value: item.ProductCode + ' ' + item.ProductName,
                         data: {
-                            type: SC_DATA.S_ProductType,
-                            displayName: getType() || $('#SearchCategory option[data-producttype="Fund"]').val(),
+                            type: type,
+                            displayName: getName(type),
                             detailUrl: '@Model.DetailPageLink.FundDetailPageLink' + '?' + $.param({ id: item.ProductCode }),
                             purchase: item.CanOnlineSubscription,
                             focusBtnHtml: item.FocusButtonAutoHtml,
@@ -367,11 +368,12 @@
 
             function getETFResult(list) {
                 $.each(SC_DATA.S_Result.ETFProducts, function (i, item) {
+                    let type = 'ETF';
                     let obj = {
                         value: item.FirstBankCode + ' ' + item.ETFName,
                         data: {
-                            type: SC_DATA.S_ProductType,
-                            displayName: getType() || $('#SearchCategory option[data-producttype="ETF"]').val(),
+                            type: type,
+                            displayName: getName(type),
                             detailUrl: '@Model.DetailPageLink.EtfDetailPageLink' + '?' + $.param({ id: item.FirstBankCode }),
                             purchase: item.CanOnlineSubscription,
                             focusBtnHtml: item.FocusButtonAutoHtml,
@@ -387,10 +389,11 @@
 
             function getForeignStockResult(list) {
                 $.each(SC_DATA.S_Result.ForeignStocks, function (i, item) {
+                    let type = 'ForeignStock';
                     let obj = {
                         value: item.FirstBankCode + ' ' + item.ChineseName + ' ' + item.EnglishName,
                         data: {
-                            displayName: getType() || $('#SearchCategory option[data-producttype="ForeignStock"]').val(),
+                            displayName: getName(type),
                             detailUrl: '@Model.DetailPageLink.ForeignStockDetailPageLink' + '?' + $.param({ id: item.FirstBankCode }),
                             purchase: item.CanOnlineSubscription,
                             focusBtnHtml: item.FocusButtonAutoHtml,
@@ -403,10 +406,11 @@
 
             function getForeignBondsResult(list) {
                 $.each(SC_DATA.S_Result.ForeignBonds, function (i, item) {
+                    let type = 'ForeignBonds';
                     let obj = {
                         value: item.BondCode + ' ' + item.BondName,
                         data: {
-                            displayName: getType() || $('#SearchCategory option[data-producttype="ForeignBonds"]').val(),
+                            displayName: getName(type),
                             detailUrl: '@Model.DetailPageLink.ForeignBondsDetailPageLink' + '?' + $.param({ id: item.ProductCode }),
                         }
                     };
@@ -416,10 +420,11 @@
 
             function getStructuredProductResult(list) {
                 $.each(SC_DATA.S_Result.StructuredProducts, function (i, item) {
+                    let type = 'StructuredProduct';
                     let obj = {
                         value: item.ProductCode + ' ' + item.ProductName,
                         data: {
-                            displayName: getType() || $('#SearchCategory option[data-producttype="StructuredProduct"]').val(),
+                            displayName: getType(type),
                             detailUrl: '@Model.DetailPageLink.StructuredProductDetailPageLink' + '?' + $.param({ id: item.ProductCode })
                         }
                     };
