--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Scripts.cshtml
@@ -366,7 +366,8 @@
                     $.ajax({
                         type: "post",
                         url: "@ClientRoute.GenerateUrl(this, "Accounts", "InsertTrack")",
-                        data: { "trackList": store.get("focus") || [], "productId": id ,"pageUrl": window.location.pathname + window.location.search},
+                        data: { "trackList": store.get("focus") || [], "productId": id ,"pageUrl": window.location.pathname + window.location.search
+                            , "productType": type},
                         beforeSend: function () { $('.c-loading').loading('show'); },
                         success: function (resp) {
                             if(!resp.success && resp.block)
