Update: 基金/ETF排行頁 漲跌值為0時顯示樣式調整

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountPremium/DiscountPremium.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountPremium/DiscountPremium.cshtml
@@ -319,7 +319,9 @@
 				<div class="c-cardTable__title" data-length="5">折溢價</div>
 				<div class="c-cardTable__content">
 					<% if (DiscountPremium.Value!=null) { %>
-					<% if (DiscountPremium.Key) { %>
+					<% if (DiscountPremium.Value == 0) { %>
+					<span><%= DiscountPremium.Text %>%</span>
+					<% } else if (DiscountPremium.Key) { %>
 					<span class="o-rise"><%= DiscountPremium.Text %>%</span>
 					<% } else { %>
 					<span class="o-fall"><%= DiscountPremium.Text %>%</span>
