--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/EFirstChoice/EFirstChoiceReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/EFirstChoice/EFirstChoiceReturnView.cshtml
@@ -67,6 +67,10 @@
 					{
 						<span class="o-fall">@item.PercentageChangeInFundPrice%</span>
 					}
+					else if (item.PercentageChangeInFundPrice == 0)
+					{
+						<span>@item.PercentageChangeInFundPrice%</span>
+					}
 					else
 					{
 						<span class="o-rise">@item.PercentageChangeInFundPrice%</span>
@@ -86,6 +90,10 @@
 					if (item.SixMonthReturnOriginalCurrency < 0)
 					{
 						<span class="o-fall">@item.SixMonthReturnOriginalCurrency%</span>
+					}
+					else if (item.SixMonthReturnOriginalCurrency == 0)
+					{
+						<span>@item.SixMonthReturnOriginalCurrency%</span>
 					}
 					else
 					{
