--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/HotFund/HotFundReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/HotFund/HotFundReturnView.cshtml
@@ -49,7 +49,11 @@
                 @if (item.PercentageChangeInFundPrice < 0)
                 {
                     <span class="o-fall">@item.PercentageChangeInFundPrice%</span>
-                }
+				}
+				else if (item.PercentageChangeInFundPrice == 0)
+				{
+					<span>@item.PercentageChangeInFundPrice%</span>
+				}
                 else
                 {
                     <span class="o-rise">@item.PercentageChangeInFundPrice%</span>
@@ -62,7 +66,11 @@
                 @if (item.SixMonthReturnOriginalCurrency < 0)
                 {
                     <span class="o-fall">@item.SixMonthReturnOriginalCurrency%</span>
-                }
+				}
+				else if (item.SixMonthReturnOriginalCurrency == 0)
+				{
+					<span>@item.SixMonthReturnOriginalCurrency%</span>
+				}
                 else
                 {
                     <span class="o-rise">@item.SixMonthReturnOriginalCurrency%</span>
