--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PopularityFund/PopularityFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PopularityFund/PopularityFund.cshtml
@@ -171,6 +171,10 @@
                                             {
                                                 <span class="o-fall">@item.PercentageChangeInFundPrice%</span>
                                             }
+                                            else if (item.PercentageChangeInFundPrice == 0)
+                                            {
+                                                <span>@item.PercentageChangeInFundPrice%</span>
+                                            }
                                             else
                                             {
                                                 <span class="o-rise">@item.PercentageChangeInFundPrice%</span>
@@ -183,6 +187,10 @@
                                             @if (item.SixMonthReturnOriginalCurrency < 0)
                                             {
                                                 <span class="o-fall">@item.SixMonthReturnOriginalCurrency%</span>
+                                            }
+                                            else if (item.SixMonthReturnOriginalCurrency == 0)
+                                            {
+                                                <span>@item.SixMonthReturnOriginalCurrency%</span>
                                             }
                                             else
                                             {
@@ -259,7 +267,7 @@
             function ReturnView(orderby, desc) {
                 var token = $('input[name="__RequestVerificationToken"]').val();
 
-				window.loading = () => 0;//蓋掉window.loading function
+                window.loading = () => 0;//蓋掉window.loading function
                 $.ajax({
                     url: '@ClientRoute.GenerateUrl(this, "PopularityFund", "GetSortedPopularityFund")',
                     type: 'POST',
@@ -272,11 +280,11 @@
                         $('[eh-compare]').trigger('exec');
                         $('[eh-focus]').trigger('exec');
                         $('[eh-subscription-type]').trigger('exec');
-					},
-					complete: function () {
-						$('.c-loading').loading('hide');
-						window.loading = (methodOrOptions) => $('.c-loading').loading(methodOrOptions);  // 重新定義 loading
-					},
+                    },
+                    complete: function () {
+                        $('.c-loading').loading('hide');
+                        window.loading = (methodOrOptions) => $('.c-loading').loading(methodOrOptions);  // 重新定義 loading
+                    },
                     error: function (xhr, status, error) {
                         console.error(error);
                     }
