client brower 避免 SyntaxError: Unexpected token ';'

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/TabCards/TabCard.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/TabCards/TabCard.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Web.Script.Serialization
-@model Feature.Wealth.Component.Models.TabCards.TabCardModel
+﻿@model Feature.Wealth.Component.Models.TabCards.TabCardModel
 
 @{
     var item = Model.Datasource;
